--- a/Chat/index.html
+++ b/Chat/index.html
@@ -5,35 +5,112 @@
 	<body>
 		<!-- div main start -->
 		<div id="main">
-			
-			<!-- div header start -->
-			<div id="header">
-				<div id="menu"> <span>Menu</span> </div>
-				<div id="room">
-					<h1> ECV 2017 Chat </h1>
-				</div>
-			</div>
-			<!-- div header end -->
-			
-			<!-- div content start -->
-			<div id="content">
-				<div id="left">
-					<div id="msgs"></div>
-					<div id="writer">
-						<input id="chatinput" type="text" />
-						<button class="mini">send</button>
+			<!-- div admin start -->
+			<div id="admin" class="left">
+				<!-- div header start -->
+				<div id="header">
+					<div id="menu"> 
+						<span><img src="img/menuIcon.png" width="25" height="25"/></span>
+						<span>ROOM</span>
+					</div>
+					<div id="room">
+						<span><img src="img/menuIcon.png" width="25" height="25"/></span>
+						<span>Users</span> 
 					</div>
 				</div>
-				<div id="right">
+				<!-- div header end -->
+				
+				<!-- div content start -->
+				<div id="content">
+					<div id="left" >
+						<div class="hidden-scrollbar">
+							<div class="openchats">
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/gLetter.PNG')"></div>
+									<span>General</span> 
+								</div>
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>Sebastian</span> 
+								</div>
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>Abel</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div>
+								<!--<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> <div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> <div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 5</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 3</span> 
+								</div> 
+								<div class="chat">
+									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<span>User 50</span> 
+								</div>-->
+							</div>
+						</div>
+					</div>
+					<div id="right">
+						<div id="msgs"></div>
+						<div id="writer">
+							<input id="chatinput" type="text" />
+							<button class="mini">send</button>
+						</div>
+					</div>
 				</div>
+				<!-- div content end -->
+				
+				<!-- div footer start -->
+				<div id="footer">
+					<p class = "footer_text">Made by Sebastian Maya and Abel Dellà</p>
+				</div>
+				<!-- div footer end -->
 			</div>
-			<!-- div content end -->
-			
-			<!-- div footer start -->
-			<div id="footer">
-				<p class = "footer_text">Made by Sebastian Maya and Abel Dellà</p>
-			</div>
-			<!-- div footer end -->
+			<!-- div admin end -->
 		
 		</div>
 		<!-- div main end -->
