Messages design and solved error in addMsgs

--- a/Chat/index.html
+++ b/Chat/index.html
@@ -26,19 +26,19 @@
 						<div class="hidden-scrollbar">
 							<div class="openchats">
 								<div class="chat">
-									<div class="avatar" style="background-image: url('img/gLetter.PNG')"></div>
+									<div class="avatar avatar2" style="background-image: url('img/gLetter.PNG')"></div>
 									<span>General</span> 
 								</div>
 								<div class="chat">
-									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<div class="avatar avatar2" style="background-image: url('img/avatar.jpg')"></div>
 									<span>Sebastian</span> 
 								</div>
 								<div class="chat">
-									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<div class="avatar avatar2" style="background-image: url('img/avatar.jpg')"></div>
 									<span>Abel</span> 
 								</div> 
 								<div class="chat">
-									<div class="avatar" style="background-image: url('img/avatar.jpg')"></div>
+									<div class="avatar avatar2" style="background-image: url('img/avatar.jpg')"></div>
 									<span>User 3</span> 
 								</div>
 								<!--<div class="chat">
@@ -95,7 +95,24 @@
 						</div>
 					</div>
 					<div id="right">
-						<div id="msgs"></div>
+						<div id="msgs">
+							<div class="msg rcv">
+								<div class="avatar avatar3" style="background-image: url('img/avatar.jpg')"></div>
+								<div class="msg-info">
+									<div class="msg-username">Abel</div>
+									<div class="msg-date">date</div>
+									<p class="msg-text">hola como estas? yo muy bien, sabes que? ayer hice muchas cosas</p>
+								</div>
+							</div>
+							<div class="msg snd">
+								<div class="avatar avatar3" style="background-image: url('img/avatar.jpg')"></div>
+								<div class="msg-info">
+									<div class="msg-username">Sebas</div>
+									<div class="msg-date">date</div>
+									<p class="msg-text">hola</p>
+								</div>
+							</div>
+						</div>
 						<div id="writer">
 							<input id="chatinput" type="text" />
 							<button class="mini">send</button>
