Login page with event error

--- a/Chat/index.html
+++ b/Chat/index.html
@@ -4,6 +4,42 @@
 	</head>
 	<body>
 		<!-- div main start -->
+		<div class="login-externo">
+			<div class="login-middle">
+				<div id="login">
+					<table>
+						<tr>
+							<td>Username:</td>
+							<td colspan="3"><input id="user" type="text" name="username" placeholder="Write your username"/></td>
+						</tr>
+						<tr>
+							<td colspan="4">Avatar:</td>
+						</tr>
+						<tr>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('img/avatar.jpg')"></div></td>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('http://icons.iconarchive.com/icons/mattahan/ultrabuuf/256/Comics-Logan-icon.png')"></div></td>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('http://icons.iconarchive.com/icons/mattahan/ultrabuuf/256/Street-Fighter-Chun-Li-icon.png')"></div></td>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('http://icons.iconarchive.com/icons/mattahan/ultrabuuf/256/Comics-Batman-Joker-icon.png')"></div></td>
+						</tr>
+						<tr>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('http://icons.iconarchive.com/icons/mattahan/ultrabuuf/256/Comics-Magneto-icon.png')"></div></td>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('http://icons.iconarchive.com/icons/mattahan/ultrabuuf/256/Comics-Mask-icon.png')"></div></td>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('http://icons.iconarchive.com/icons/mattahan/ultrabuuf/256/Comics-Older-Superman-icon.png')"></div></td>
+							<td><div class="avatar avatar2 avatar4" style="background-image: url('http://icons.iconarchive.com/icons/mattahan/ultrabuuf/256/Comics-Hulk-Happy-icon.png')"></div></td>
+						</tr>
+						<tr>
+							<td colspan="4" style="text-align: center;">
+								<div class="mini2">Login</div>
+							</td>
+						</tr>
+					</table>
+					
+				</div>
+			</div>
+		</div>
+		<!-- div main end -->
+	
+		<!-- div main start -->
 		<div id="main">
 			<!-- div admin start -->
 			<div id="admin" class="left">
