Commented menu example

--- a/Chat/index.html
+++ b/Chat/index.html
@@ -53,6 +53,23 @@
 						<span>Users</span> 
 					</div>
 				</div>
+				
+				<!--<div class="dropdown">
+					<button class="dropbtn"><img src="img/menuIcon.png" width="25" height="25"/> ROOM</button>
+					<div id="myDropdown" class="dropdown-content">
+						<input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+						<a href="#about">Update avatar</a>
+						<a href="#base">Logout</a>
+				  </div>
+				</div>
+				<div class="dropdown2">
+					<button class="dropbtn2"><img src="img/menuIcon.png" width="25" height="25"/> Users</button>
+					<div id="myDropdown2" class="dropdown-content2">
+						<input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+						<a href="#about">User1</a>
+						<a href="#base">User2</a>
+				  </div>
+				</div>-->
 				<!-- div header end -->
 				
 				<!-- div content start -->
