first render with wrong location

--- a/ECV2/index.html
+++ b/ECV2/index.html
@@ -170,15 +170,16 @@
 			<!-- div admin end -->
 			
 			<div id="contentCanvas" class="right">
-				<canvas id="painter" width="500" height="500" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas.</canvas>
+				<!--<canvas id="painter" width="500" height="500" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas.</canvas>-->
 			</div>
 		</div>
 		<!-- div main end -->
 		
 		<!-- JavaScript code -->
 		<script src="js/libs/sillyclient.js"></script>
+		<script src="js/libs/three.js"></script>
 		<script src="js/canvasPainter.js"></script>
 		<script src="js/code.js"></script>
-		<script>APP.init()</script>
+		<script></script>
 	</body>
 </html>
