Insert and delete user in user list

--- a/Chat2/index.html
+++ b/Chat2/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style2.css" rel="stylesheet">
 	</head>
 	<body>
 		<!----- Login ----->
@@ -75,7 +75,7 @@
 									<div class="avatar avatar-25 div-center" style="background-image: url('img/gLetter.PNG')"></div>
 									<span>General</span> 
 								</div>
-								<div class="chat">
+								<!--<div class="chat">
 									<div class="avatar avatar-25 div-center" style="background-image: url('img/avatar.jpg')"></div>
 									<span>User 2</span> 
 								</div> 
@@ -83,7 +83,7 @@
 									<div class="avatar avatar-25 div-center" style="background-image: url('img/avatar.jpg')"></div>
 									<span>User 3</span> 
 								</div>
-								<!--<div class="chat">
+								<div class="chat">
 									<div class="avatar avatar-25 div-center" style="background-image: url('img/avatar.jpg')"></div>
 									<span>User 3</span> 
 								</div>
