--- a/Chat2/index.html
+++ b/Chat2/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="css/style2.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<!----- Login ----->
