Canvas space ready

--- a/Chat2/index.html
+++ b/Chat2/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="css/style2.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<!----- Login ----->
@@ -154,7 +154,8 @@
 			
 			<!----- Canvas ----->
 			<div class="canvas-general">
-			
+				<div class="canvas-menu"></div>
+				<div class="canvas-content"></div>
 			</div>
 			<!----- End Canvas ----->
 			
