3D canvas, cube and ground example

--- a/Chat2/index.html
+++ b/Chat2/index.html
@@ -155,7 +155,7 @@
 			<!----- Canvas ----->
 			<div class="canvas-general">
 				<div class="canvas-menu"></div>
-				<div class="canvas-content"></div>
+				<div id="3DCanvas" class="canvas-content"></div>
 			</div>
 			<!----- End Canvas ----->
 			
@@ -164,6 +164,8 @@
 		
 		<!-- JavaScript code -->
 		<script src="js/libs/sillyclient.js"></script>
+		<script src="js/libs/three.js"></script>
+		<script src="js/libs/OrbitControls.js"></script>
 		<script src="js/code.js"></script>
 	</body>
 </html>
