drag control and edit dragControls file to consider resizing windows

--- a/Chat2/index.html
+++ b/Chat2/index.html
@@ -152,12 +152,12 @@
 			</div>
 			<!----- End Chat ----->
 			
-			<!----- Canvas ----->
+			<!-- Canvas -->
 			<div class="canvas-general">
 				<div class="canvas-menu"></div>
 				<div id="3DCanvas" class="canvas-content"></div>
 			</div>
-			<!----- End Canvas ----->
+			<!-- End Canvas -->
 			
 		</div>
 		<!----- End Main ----->
@@ -166,6 +166,7 @@
 		<script src="js/libs/sillyclient.js"></script>
 		<script src="js/libs/three.js"></script>
 		<script src="js/libs/OrbitControls.js"></script>
+		<script src="js/libs/DragControls.js"></script>
 		<script src="js/code.js"></script>
 	</body>
 </html>
