new document for APP code (canvas core)

--- a/Chat2/index.html
+++ b/Chat2/index.html
@@ -167,6 +167,7 @@
 		<script src="js/libs/three.js"></script>
 		<script src="js/libs/OrbitControls.js"></script>
 		<script src="js/libs/DragControls.js"></script>
+		<script src="js/canvas3D.js"></script>
 		<script src="js/code.js"></script>
 	</body>
 </html>
