Detecting click and interacting from it. Positioning of human systems and spheres for load a new view with canvasDetail. Some htmls and meshes for canvasDetail

--- a/FinalApp/index.html
+++ b/FinalApp/index.html
@@ -98,18 +98,18 @@
 							<td colspan="5"><b>Systems</b></td>
 						</tr>
 						<tr>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skin.png')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/muscle.jpg')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy1" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy2" class="avatar system-icon" style="background-image: url('img/muscle.jpg')"></div></td>
+							<td><div id="anatomy3" class="avatar system-icon" style="background-image: url('img/skin.png')"></div></td>
+							<td><div id="anatomy4" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy5" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
 						</tr>
 						<tr>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy6" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy7" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy8" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy9" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy10" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
 						</tr>
 						<tr id="blockStudents">
 							<td colspan="5"><input type="checkbox" name="" value=""/>Block students</td>
@@ -172,7 +172,7 @@
 				
 				<!-- Information -->
 				<div id="information">
-					<iframe class="infoFrame" src="https://es.wikipedia.org/"></iframe>
+					<iframe class="infoFrame" id="infoFrame" src="https://es.wikipedia.org/"></iframe>
 				</div>
 				<!-- End Information -->
 
@@ -189,6 +189,7 @@
 		<script src="js/libs/three.js"></script>
 		<script src="js/libs/OrbitControls.js"></script>
 		<script src="js/libs/DragControls.js"></script>
+		<script src="js/libs/OBJLoader.js"></script>
 		<script src="js/canvas3D.js"></script>
 		<script src="js/code.js"></script>
 	</body>
