canvasDetail takes as a parameter obj and mtl; meshes skull and hand; some htmls for organs; firts version of home with organs links

--- a/FinalApp/femur.html
+++ b/FinalApp/femur.html
@@ -6,7 +6,7 @@
     <body>
         <div class="content">
             <p>
-                <a href="">Osseous system</a> / Femur
+                <a href="home.html">Osseous system</a> / Femur
             </p>
             <h1>Femur</h1>
 
@@ -29,9 +29,10 @@
             <script src="js/libs/three.js"></script>
             <script src="js/libs/OrbitControls.js"></script>
             <script src="js/libs/OBJLoader.js"></script>
+            <script src="js/libs/MTLLoader.js"></script>
             <script src="js/canvasDetail.js"></script>
             <script>
-                canvasDetail.init("femur");
+                canvasDetail.init( "femur", "femur");
             </script>
         </div>
     </body>
