--- a/FinalApp/index.html
+++ b/FinalApp/index.html
@@ -88,9 +88,9 @@
 						</tr>
 						<tr>
 							<td><div id="anatomy1" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="anatomy2" class="avatar system-icon" style="background-image: url('img/muscle.jpg')"></div></td>
-							<td><div id="anatomy3" class="avatar system-icon" style="background-image: url('img/skin.png')"></div></td>
-							<td><div id="anatomy4" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy2" class="avatar system-icon" style="background-image: url('img/skin.png')"></div></td>
+							<td><div id="anatomy3" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy4" class="avatar system-icon" style="background-image: url('img/muscle.jpg')"></div></td>
 							<td><div id="anatomy5" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
 						</tr>
 						<tr>
@@ -180,7 +180,7 @@
 				</div>
 				<!-- Information -->
 				<div id="information">
-					<iframe class="infoFrame" id="infoFrame" src="https://es.wikipedia.org/"></iframe>
+					<iframe class="infoFrame" id="infoFrame" src="home.html"></iframe>
 				</div>
 				<!-- End Information -->
 
