Info pages organization and styles

--- a/FinalApp/index.html
+++ b/FinalApp/index.html
@@ -180,7 +180,7 @@
 				</div>
 				<!-- Information -->
 				<div id="information">
-					<iframe class="infoFrame" id="infoFrame" src="home.html"></iframe>
+					<iframe class="infoFrame" id="infoFrame" src="infoPages/home.html"></iframe>
 				</div>
 				<!-- End Information -->
 
