--- a/FinalApp/infoPages/cardiovascular/heart.html
+++ b/FinalApp/infoPages/cardiovascular/heart.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="css/info.css" rel="stylesheet">
+        <link href="../../css/info.css" rel="stylesheet">
     </head>
     <body>
         <div class="content">
             <p>
-                <a href="home.html">Osseous system</a> / Heart
+                <a href="../home.html">Home</a> / <a href="index.html">Cardiovascular system</a> / Heart
             </p>
             <h1>Heart</h1>
 
@@ -31,11 +31,11 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Heart_anterior_exterior_view.jpg" />
             </div>-->
 
-            <script src="js/libs/three.js"></script>
-            <script src="js/libs/OrbitControls.js"></script>
-            <script src="js/libs/OBJLoader.js"></script>
-            <script src="js/libs/MTLLoader.js"></script>
-            <script src="js/canvasDetail.js"></script>
+            <script src="../../js/libs/three.js"></script>
+            <script src="../../js/libs/OrbitControls.js"></script>
+            <script src="../../js/libs/OBJLoader.js"></script>
+            <script src="../../js/libs/MTLLoader.js"></script>
+            <script src="../../js/canvasDetail.js"></script>
             <script>
                 canvasDetail.init( "heart", "heart" );
             </script>
