Systems info pages

--- a/FinalApp/infoPages/cardiovascular/heart.html
+++ b/FinalApp/infoPages/cardiovascular/heart.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="content">
-            <p>
+            <p class="path">
                 <a href="../home.html">Home</a> / <a href="index.html">Cardiovascular system</a> / Heart
             </p>
             <h1>Heart</h1>
