--- a/FinalApp/infoPages/cardiovascular/index.html
+++ b/FinalApp/infoPages/cardiovascular/index.html
@@ -5,14 +5,14 @@
     </head>
     <body>
         <div class="content">
-            <p>
+            <p class="path">
                 <a href="../home.html">Home</a> / Cardiovascular system
             </p>
             <h1>Cardiovascular system</h1>
 
-            <p>The essential components of the human cardiovascular system are the heart, blood and blood vessels. It includes the pulmonary circulation, a "loop" through the lungs where blood is oxygenated; and the systemic circulation, a "loop" through the rest of the body to provide oxygenated blood. The systemic circulation can also be seen to function in two parts–a macrocirculation and a microcirculation. An average adult contains five to six quarts (roughly 4.7 to 5.7 liters) of blood, accounting for approximately 7% of their total body weight. Blood consists of plasma, red blood cells, white blood cells, and platelets. Also, the digestive system works with the circulatory system to provide the nutrients the system needs to keep the heart pumping.
+            <p>The essential components of the human cardiovascular system are the heart, blood and blood vessels. It includes the pulmonary circulation, a "loop" through the lungs where blood is oxygenated; and the systemic circulation, a "loop" through the rest of the body to provide oxygenated blood. The systemic circulation can also be seen to function in two parts–a macrocirculation and a microcirculation. An average adult contains five to six quarts (roughly 4.7 to 5.7 liters) of blood, accounting for approximately 7% of their total body weight. Blood consists of plasma, red blood cells, white blood cells, and platelets. Also, the digestive system works with the circulatory system to provide the nutrients the system needs to keep the heart pumping.</p>
 
-            The cardiovascular systems of humans are closed, meaning that the blood never leaves the network of blood vessels. In contrast, oxygen and nutrients diffuse across the blood vessel layers and enter interstitial fluid, which carries oxygen and nutrients to the target cells, and carbon dioxide and wastes in the opposite direction. The other component of the circulatory system, the lymphatic system, is open.</p>
+            <p>The cardiovascular systems of humans are closed, meaning that the blood never leaves the network of blood vessels. In contrast, oxygen and nutrients diffuse across the blood vessel layers and enter interstitial fluid, which carries oxygen and nutrients to the target cells, and carbon dioxide and wastes in the opposite direction. The other component of the circulatory system, the lymphatic system, is open.</p>
 
             <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Vein_art_near.png" />
         </div>
