--- a/FinalApp/infoPages/home.html
+++ b/FinalApp/infoPages/home.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="content">
-            <p>
+            <p class="path">
                 <a href="home.html">Home</a> 
             </p>
             <h1>Anatomy Learning</h1>
@@ -13,12 +13,18 @@
             <p>Welcome to a 3D anatomy environment, here you can discover different systems and organs of the human body from a different point of view. Have fun learning and exploring all the corners of our body</p>
 
             
-            <h3>Systems and Organs</h3>
+            <h3>Systems</h3>
             <ul>
-                <li> <a href="cardiovascular/">Cardiovascular system</a> </li>
-                <li> <a href="hand.html">Hands</a> </li>
-                <li> <a href="skull.html">Skull</a> </li>
-                <li> <a href="femur.html">Femur</a> </li>
+                <li><a href="cardiovascular/">Cardiovascular system</a></li>
+                <li><a href="digestive/">Digestive system</a></li>
+                <li><a href="integumentary/">Integumentary system</a></li>
+                <li><a href="lymphatic/">Lymphatic system</a></li>
+                <li><a href="muscular/">Muscular system</a></li>
+                <li><a href="nervous/">Nervous system</a></li>
+                <li><a href="renal/">Renal system</a></li>
+                <li><a href="reproductive/">Reproductive system</a></li>
+                <li><a href="respiratory/">Respiratory system</a></li>
+                <li><a href="skeletal/">Skeletal system</a></li>
             </ul>
             </p>
         </div>
