--- a/FinalApp/infoPages/skeletal/skull.html
+++ b/FinalApp/infoPages/skeletal/skull.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="css/info.css" rel="stylesheet">
+        <link href="../../css/info.css" rel="stylesheet">
     </head>
     <body>
         <div class="content">
-            <p>
-                <a href="home.html">Osseous system</a> / Skull
+            <p class="path">
+                <a href="../home.html">Home</a> / <a href="index.html">Skeletal system</a> / Skull
             </p>
             <h1>Skull</h1>
 
