new menu icons, meshes positioning and lights first try positioning

--- a/FinalApp/index.html
+++ b/FinalApp/index.html
@@ -87,18 +87,18 @@
 							<td colspan="5"><b>Systems</b></td>
 						</tr>
 						<tr>
-							<td><div id="anatomy1" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="anatomy2" class="avatar system-icon" style="background-image: url('img/skin.png')"></div></td>
-							<td><div id="anatomy3" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="anatomy4" class="avatar system-icon" style="background-image: url('img/muscle.jpg')"></div></td>
-							<td><div id="anatomy5" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy1" class="avatar system-icon" style="background-image: url('img/skin.png')"></div></td>
+							<td><div id="anatomy2" class="avatar system-icon" style="background-image: url('img/muscle.png')"></div></td>
+							<td><div id="anatomy3" class="avatar system-icon" style="background-image: url('img/bones.png')"></div></td>
+							<td><div id="anatomy4" class="avatar system-icon" style="background-image: url('img/heart.png')"></div></td>
+							<td><div id="anatomy5" class="avatar system-icon" style="background-image: url('img/lungs.png')"></div></td>
 						</tr>
 						<tr>
-							<td><div id="anatomy6" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="anatomy7" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="anatomy8" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="anatomy9" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
-							<td><div id="anatomy10" class="avatar system-icon" style="background-image: url('img/skeleton.png')"></div></td>
+							<td><div id="anatomy6" class="avatar system-icon" style="background-image: url('img/intestine.png')"></div></td>
+							<td><div id="anatomy7" class="avatar system-icon" style="background-image: url('img/kidney.png')"></div></td>
+							<td><div id="anatomy8" class="avatar system-icon" style="background-image: url('img/bladder.png')"></div></td>
+							<td><div id="anatomy9" class="avatar system-icon" style="background-image: url('img/brain.png')"></div></td>
+							<td><div id="anatomy10" class="avatar system-icon" style="background-image: url('img/eye.png')"></div></td>
 						</tr>
 						<tr id="blockStudents">
 							<td colspan="5"><input type="checkbox" name="" value=""/>Block students</td>
