Resolving little bug in info pages

--- a/FinalApp/infoPages/skeletal/skull.html
+++ b/FinalApp/infoPages/skeletal/skull.html
@@ -28,11 +28,11 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Heart_anterior_exterior_view.jpg" />
             </div>-->
 
-            <script src="js/libs/three.js"></script>
-            <script src="js/libs/OrbitControls.js"></script>
-            <script src="js/libs/OBJLoader.js"></script>
-            <script src="js/libs/MTLLoader.js"></script>
-            <script src="js/canvasDetail.js"></script>
+            <script src="../../js/libs/three.js"></script>
+            <script src="../../js/libs/OrbitControls.js"></script>
+            <script src="../../js/libs/OBJLoader.js"></script>
+            <script src="../../js/libs/MTLLoader.js"></script>
+            <script src="../../js/canvasDetail.js"></script>
             <script>
                 canvasDetail.init( "skull", "skull" );
             </script>
